--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--App colors-->
+
+    <!--Main colors-->
+    <color name="light_blue">#A3DAFB</color>
+
+    <!--Colors usage-->
+    <color name="splash_bg">@color/light_blue</color>
+    <color name="app_primary">@color/light_blue</color>
 </resources>
