--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,11 +28,12 @@
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/app_name_text"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_below="@id/splash_app_logo_bg"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_marginTop="20dp"
-            android:src="@drawable/app_text_1x" />
+            android:src="@drawable/app_text_red" />
     </RelativeLayout>
 </RelativeLayout>
