--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,12 @@
 
     <!--Main colors-->
     <color name="light_blue">#A3DAFB</color>
+    <color name="gray">#747476</color>
+    <color name="faint_black">#2B2B2B</color>
 
     <!--Colors usage-->
     <color name="splash_bg">@color/light_blue</color>
     <color name="app_primary">@color/light_blue</color>
+    <color name="hint_color">@color/gray</color>
+    <color name="text_color">@color/faint_black</color>
 </resources>
